[gd_scene load_steps=25 format=2]

[ext_resource path="res://Enemies/DemonLord.gd" type="Script" id=1]
[ext_resource path="res://Overlap/Hurtboxes.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/ObstacleDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/DemonLord_strip4.png" type="Texture" id=9]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=10]
[ext_resource path="res://Overlap/SlimeHitbox.gd" type="Script" id=11]
[ext_resource path="res://Music and Sounds/strange-lullaby-28691.mp3" type="AudioStream" id=12]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Move",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 21.5, 11.4219 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 72.25, 16.75 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 12.25, 22.75 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 200, 182 )

[sub_resource type="CircleShape2D" id=10]
radius = 28.0179

[sub_resource type="CircleShape2D" id=11]
radius = 22.0907

[sub_resource type="CapsuleShape2D" id=12]
radius = 72.0
height = 0.0

[node name="Demon Lord" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 2.84217e-13, 31 )
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="AnimationSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 5, 5 )
frames = SubResource( 17 )
animation = "Move"
frame = 2
playing = true
offset = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -17, 55 )
shape = SubResource( 25 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 26, 55 )
shape = SubResource( 25 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 3, 40.25 )
shape = SubResource( 26 )

[node name="Hurtboxes" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtboxes" index="0"]
position = Vector2( -22.5, 25.5 )
shape = SubResource( 24 )

[node name="Hurtboxes2" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtboxes2" index="0"]
position = Vector2( 27, 25 )
shape = SubResource( 24 )

[node name="Hurtboxes3" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtboxes3" index="0"]
position = Vector2( 2, -10 )
shape = SubResource( 24 )

[node name="Stats" parent="." instance=ExtResource( 8 )]
max_health = 50.0

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 0, 160 )
shape = SubResource( 23 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_mask = 4
script = ExtResource( 11 )
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, -19 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 33

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 3, 19 )
shape = SubResource( 11 )
disabled = true

[node name="WanderController" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 0, -3 )

[node name="ObstacleDetection" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 0

[node name="CollisionShape2D" parent="ObstacleDetection" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -32 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0

[connection signal="area_entered" from="Hurtboxes" to="." method="_on_Hurtboxes_area_entered"]
[connection signal="area_entered" from="Hurtboxes2" to="." method="_on_Hurtboxes_area_entered"]
[connection signal="area_entered" from="Hurtboxes3" to="." method="_on_Hurtboxes_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtboxes"]
[editable path="Hurtboxes2"]
[editable path="Hurtboxes3"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
[editable path="WanderController"]
[editable path="ObstacleDetection"]
